# android-nativesocket

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/yutianzuo/myapplication/: BaseDialog.java  DnsActivity.java  DnsReleaseActivity.java  FileProviderUtils.java  MainActivity.java  PathUtils.java  RecvActivity.java  SendFileActivity.java  WifiP2pActionListener.java  WifiP2pActivity.java  WifiP2pDynamicOwnerActivity.java  WifiP2pReceiver.java
app/src/main/res/layout/: activity_dns.xml  activity_dns_release.xml  activity_main.xml  activity_recv.xml  activity_send.xml  base_dlg_layout.xml  list_item.xml  loading_layout.xml  p2p_activity.xml
app/src/main/res/raw/: charles.pem
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml
app/src/main/res/xml/: network_security_config.xml
gradle/wrapper/: gradle-wrapper.properties
nativesock/: CMakeLists.txt  build.gradle
nativesock/src/androidTest/java/com/github/yutianzuo/nativesock/: ExampleInstrumentedTest.java
nativesock/src/main/: AndroidManifest.xml
nativesock/src/main/cpp/: jni.cpp  jnidef.h
nativesock/src/main/cpp/netutils/: dns.h  errorhunter.h
nativesock/src/main/cpp/socket/: clientsocket.h  serversocket.h  simpleudpclient.h  simpleudpserver.h  socketbase.h
nativesock/src/main/cpp/tcptransfile/: datadef.h  recvmmap.h  server.h  transfiletcprecv.h  transfiletcpsender.h  transrecvctrl.h  transsendctrl.h
nativesock/src/main/cpp/toolbox/: logutils.h  miscs.h  semaphore.h  simpleproclock.h  stlutils.h  string_x.h  threadpool.h
nativesock/src/main/cpp/transdata/: CBMD5.h  Crc32.h  transdata.h
nativesock/src/main/java/com/github/yutianzuo/nativesock/: Dns.java  JniDef.java
nativesock/src/main/res/values/: strings.xml
nativesock/src/test/java/com/github/yutianzuo/nativesock/: ExampleUnitTest.java
